## Oreon 1.3.4
=> Feature : In configuration, massive change options for numbers of elements with "quick select" menu (host, service, contact)
=> Feature : In configuration, availability to enable/disable numbers of elements with "quick select" menu (host, hostgroup, service, contact)
=> Feature : Add 3 field in topology table for style class/id and javascript Onclik
=> Feature : Add a light module manager
=> Feature Request  #294 : Manage Nagios2 init script
=> Bugfix : #295
=> BugFix : Availability to reach another page than "Hosts stats" when we arrive with a ACL

## Oreon 1.3.3

=> BugFix : change all bad mysql error check by new one.
=> BugFix : Add command arg for host event handler which was forgotten.

## Oreon 1.3.2

=> BugFix : delete unused javascript on eventlog page
=> BugFix : coreecte byg on id cards.
=> BugFix : remove bug on ajax reloading
=> BugFix : ACL in ajax reloading engine
=> Feature : Add picture for help and logout link.

## Oreon 1.3.2-b2

=> Feature : add host arguments for check and event handler
=> BugFix : Best ACL for pages
=> Feature : add possibility to sort service problem by different key defined in general options
=> Feature : Dashboard in reporting Timeline
=> Bugfix : IDCard Better Algo
=> Bugfix : IDCard percent error with Server Storage Device
=> Bugfix : #260
=> Feature : add host arguments for check and event handler
=> BugFix : Best ACL for pages
=> Feature : add possibility to sort service problem by different key defined in general options
=> Bugfix : #226 For resources upload, delete the '#' in the expression and put the MACRO state to 'disabled'
=> Feature : When creating an Host based on Host Template, multi level inheritance for services link to host templates
=> Bugfix : #234
=> Bugfix : #240
=> Bugfix : pagination with IE
=> Bugfix : #242
=> Bugfix : #238
=> Bugfix : topologyjs -> changetab for 60101 o=a
=> Bugfix : duplicate entry for template (in configuration)
=> Bugfix : #251