@@ -1712,11 +1712,13 @@ CREATE TABLE `modules_informations` (
   `id` int(11) NOT NULL auto_increment,
   `name` varchar(255) default NULL,
   `rname` varchar(255) default NULL,
-  `release` varchar(255) default NULL,
+  `mod_release` varchar(255) default NULL,
   `is_removeable` enum('0','1') default NULL,
   `infos` text,
   `author` varchar(255) default NULL,
   `lang_files` enum('0','1') default NULL,
+  `sql_files` enum('0','1') default NULL,
+  `php_files` enum('0','1') default NULL,
   PRIMARY KEY  (`id`)
 ) ENGINE=InnoDB DEFAULT CHARSET=utf8 ;
 
